--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,35 @@
 version: '3.9'
 
 services:
-  datbase:
+  database:
     image: postgres
-    container_name: ${CONTAINER_NAME}
+    profiles:
+      - dev
+    container_name: ${CONTAINER_NAME_DEVELOPMENT}
     restart: always
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER_DEVELOPMENT}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD_DEVELOPMENT}
+      - POSTGRES_DB=${POSTGRES_DB_DEVELOPMENT}
     volumes:
       - pgdata:/data/postgres
+
+  database_test:
+    image: postgres
+    profiles:
+      - test
+    container_name: ${CONTAINER_NAME_TEST}
+    restart: always
+    ports:
+      - 9000:5432
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER_TEST}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD_TEST}
+      - POSTGRES_DB=${POSTGRES_DB_TEST}
+    volumes:
+      - pgdata:/data/test
 
 volumes:
    pgdata:
