Add auth module, Remove users module and Update readme & docker-compose file & .envs, Add tests e2e & integration test

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,12 @@
---------//-----------//--------//MASTER VARIABLES//--------//-----------//--------//-----------//
-
-
---------//-----------//--------//.env.dev//--------//-----------//--------//-----------//
 ##CREATE DOCKER CONTAINER
-CONTAINER_NAME_DEVELOPMENT= database_dev
-POSTGRES_USER_DEVELOPMENT=admin
-POSTGRES_PASSWORD_DEVELOPMENT=admin
-POSTGRES_DB_DEVELOPMENT=prisma_db_dev
+CONTAINER_NAME=database
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=admin
+POSTGRES_DB=database_app
 
-##CONNECT PRISMA WITH CONTAINER
-DATABASE_URL="postgresql://${POSTGRES_USER_DEVELOPMENT}:${POSTGRES_PASSWORD_DEVELOPMENT}@localhost:5432/${POSTGRES_DB_DEVELOPMENT}?schema=public"
+##JWT
+AT_SECRET=at-secret
+RT_SECRET=rt-secret
 
---------//-----------//--------//.env.test//--------//-----------//--------//-----------//
-##CREATE DOCKER CONTAINER
-CONTAINER_NAME_TEST= database_test
-POSTGRES_USER_TEST=admin
-POSTGRES_PASSWORD_TEST=admin
-POSTGRES_DB_TEST=prisma_db_tests
-
-##CONNECT PRISMA WITH CONTAINER
-DATABASE_URL="postgresql://${POSTGRES_USER_TEST}:${POSTGRES_PASSWORD_TEST}@localhost:9000/${POSTGRES_DB_TEST}?schema=public"
-
---------//-----------//--------//-----------//--------//-----------//--------//-----------//
+##CONNECT PRISMA WITH CONTAINER DATABASE
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=public"
