--- a/.env.test
+++ b/.env.test
@@ -1,8 +1,2 @@
-##CREATE DOCKER CONTAINER
-CONTAINER_NAME_TEST= database_test
-POSTGRES_USER_TEST=admin
-POSTGRES_PASSWORD_TEST=admin
-POSTGRES_DB_TEST=prisma_db_test
-
-##CONNECT PRISMA WITH CONTAINER
-DATABASE_URL="postgresql://${POSTGRES_USER_TEST}:${POSTGRES_PASSWORD_TEST}@localhost:9000/${POSTGRES_DB_TEST}?schema=public"
+##CONNECT PRISMA WITH CONTAINER DATABASE TEST
+DATABASE_URL="postgresql://admin:admin@localhost:9000/database_app_test?schema=public"
