--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
         "editor.codeActionsOnSave": {
             "source.fixAll.eslint": true, 
             "source.fixAll": true
-        }
+        },
+        "[prisma]": {
+            "editor.defaultFormatter": "Prisma.prisma"
+          },
+          "editor.formatOnSave": false
 }
