--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,34 @@
-version: '3.9'
+version: "3.9"
 
 services:
-  database:
-    image: postgres
-    profiles:
-      - dev
-    container_name: ${CONTAINER_NAME_DEVELOPMENT}
-    restart: always
-    ports:
-      - 5432:5432
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER_DEVELOPMENT}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD_DEVELOPMENT}
-      - POSTGRES_DB=${POSTGRES_DB_DEVELOPMENT}
-    volumes:
-      - pgdata:/data/postgres
+    database:
+        image: postgres
+        container_name: ${CONTAINER_NAME}
+        restart: always
+        ports:
+            - 5432:5432
+        environment:
+            - POSTGRES_USER=${POSTGRES_USER}
+            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+            - POSTGRES_DB=${POSTGRES_DB}
+        volumes:
+            - pgdata:/data/postgres
 
-  database_test:
-    image: postgres
-    profiles:
-      - test
-    container_name: ${CONTAINER_NAME_TEST}
-    restart: always
-    ports:
-      - 9000:5432
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER_TEST}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD_TEST}
-      - POSTGRES_DB=${POSTGRES_DB_TEST}
-    volumes:
-      - pgdata:/data/test
+    database_test:
+        image: postgres
+        profiles:
+            - test
+        container_name: database_test
+        restart: always
+        ports:
+            - 9000:5432
+        environment:
+            - POSTGRES_USER=admin
+            - POSTGRES_PASSWORD=admin
+            - POSTGRES_DB=database_app_test
+        volumes:
+            - pgdata:/data/test
 
 volumes:
-   pgdata:
-     driver: local
+    pgdata:
+        driver: local
