--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
